# platform.adaptation.xf86-module-xdbg

./: .gitignore  AUTHORS  COPYING  Makefile.am  configure.ac
common/: Makefile.am  xdbg_dbus.h  xdbg_dbus_client.c  xdbg_dbus_server.c  xdbg_evlog.c  xdbg_evlog.h  xdbg_evlog_composite.c  xdbg_evlog_composite.h  xdbg_evlog_core.c  xdbg_evlog_core.h  xdbg_evlog_damage.c  xdbg_evlog_damage.h  xdbg_evlog_dri2.c  xdbg_evlog_dri2.h  xdbg_evlog_event.c  xdbg_evlog_event.h  xdbg_evlog_gesture.c  xdbg_evlog_gesture.h  xdbg_evlog_hwc.c  xdbg_evlog_hwc.h  xdbg_evlog_randr.c  xdbg_evlog_randr.h  xdbg_evlog_reply.c  xdbg_evlog_reply.h  xdbg_evlog_request.c  xdbg_evlog_request.h  xdbg_evlog_xext.c  xdbg_evlog_xext.h  xdbg_evlog_xinput.c  xdbg_evlog_xinput.h  xdbg_evlog_xv.c  xdbg_evlog_xv.h  xdbg_types.h
common/ds/: bintree.c  bintree.h  bool_exp_parser.c  bool_exp_parser.h  bool_exp_rule_checker.c  bool_exp_rule_checker.h  bool_exp_token.h  bool_exp_tokenizer.h
dbus/: Makefile.am  xdbg_dbus_client.c  xdbg_dbus_client.h  xdbg_dbus_server.c  xdbg_dbus_server.h
lib/: Makefile.am  xdbg.h  xdbg.pc.in  xdbg_dump.c  xdbg_dump.h  xdbg_dump_module.h  xdbg_log.c  xdbg_log.h  xdbg_log_dlog.c  xdbg_log_drmevent.c  xdbg_log_drmevent.h  xdbg_log_fpsdebug.c  xdbg_log_fpsdebug.h  xdbg_log_int.h  xdbg_log_klog.c  xdbg_log_plist.c  xdbg_log_plist.h  xdbg_log_secure.h.in
module/: Makefile.am  xdbg.conf  xdbg_module.c  xdbg_module.h  xdbg_module_clist.c  xdbg_module_clist.h  xdbg_module_command.c  xdbg_module_command.h  xdbg_module_drmevent.c  xdbg_module_drmevent.h  xdbg_module_evlog.c  xdbg_module_evlog.h  xdbg_module_evlog_event.c  xdbg_module_evlog_event.h  xdbg_module_evlog_request.c  xdbg_module_evlog_request.h  xdbg_module_fpsdebug.c  xdbg_module_fpsdebug.h  xdbg_module_main.c  xdbg_module_main.h  xdbg_module_options.c  xdbg_module_options.h  xdbg_module_plist.c  xdbg_module_plist.h  xdbg_module_rlist.c  xdbg_module_rlist.h  xdbg_module_types.h
module/ds/: bintree.c  bintree.h  bool_exp_parser.c  bool_exp_parser.h  bool_exp_rule_checker.c  bool_exp_rule_checker.h  bool_exp_token.h  bool_exp_tokenizer.c  bool_exp_tokenizer.h
packaging/: xf86-module-xdbg.spec  xorg-x11-module-xdbg.spec
