# Copyright 2013 Samsung Electronics co., Ltd. All Rights Reserved.
# 
# Contact: Boram Park <boram1288.park@samsung.com>
# 
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sub license, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
# 
# The above copyright notice and this permission notice (including the
# next paragraph) shall be included in all copies or substantial portions
# of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
# OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT.
# IN NO EVENT SHALL PRECISION INSIGHT AND/OR ITS SUPPLIERS BE LIABLE FOR
# ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

libxdbg_log_la_LTLIBRARIES = libxdbg-log.la
libxdbg_log_ladir = $(libdir)
libxdbg_log_la_LIBADD = @XDBG_LIBS@
libxdbg_log_la_LDFLAGS = ${LDFLAGS}
libxdbg_log_la_CFLAGS = \
    ${CFLAGS} \
    @XDBG_CFLAGS@ \
    -I$(top_srcdir)/lib

libxdbg_log_la_SOURCES = \
	xdbg_log.c \
	xdbg_log_klog.c \
	xdbg_log_dlog.c

libincludedir = $(includedir)/xdbg
libinclude_HEADERS = \
	xdbg.h \
	xdbg_log.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = xdbg.pc
